# Real-Time-Forum

./: .env  .gitignore  Cargo.toml  README.md  commit.sh  go.mod  go.sum  main.html  package-lock.json  package.json  push.sh  run.sh  server.js  tree.md
assets/css/: style.css  variables.css
assets/css/fonts/: icon.css  poppins.css
assets/html/: index.html
assets/js/: animation.js  check.js  compenant.js  connect-user.js  constants.js  fetch.js  home.js  main.js  methods.js  post.js  register.js  script.js  socket.js
cmd/web/: run.go
htmlpages/: errorPage.html
internal/config/: cors.go  securityConfig.go
internal/handlers/: action.go  api.go  commentaire.go  security.go  websocket.go
internal/metier/database/: database.go  db-utils.go  mytemplate.db  query.go
internal/metier/database/migrations/: tables.down.sql  tables.up.sql
internal/metier/dto/: messagedto.go  postDTO.go  userdto.go
internal/metier/entities/: README.md  message.go  user.go
internal/metier/models/: action.go  cat_post.go  category.go  comment.go  post.go  session.go  template.go  user.go
internal/metier/services/implementations/: messageImpl.go  (+3 more)
internal/pkg/: check.go  encryption.go  environment.go  error.go  file.go  format.go
src/: config.toml  lib.rs  main.rs
src/doc/: TcpListener.md  epoll.md  thread.md
src/server/: cgi.rs  client.rs  mod.rs  rendering_page.rs  request.rs  response.rs  router.rs  session.rs
src/static_files/: __index.html  defaultpage.html  error.html  front3.html  index.html
src/static_files/css/: style.css
src/www/fifanela/: folder  test.rb
(+4 files in other folders)
